--- a/sass/_tags.scss
+++ b/sass/_tags.scss
@@ -80,12 +80,65 @@ button {
         transition: 0.2s $fancybezier;
         transform: translateY(0);
         z-index: -1;
-    } &:hover {
+    } &:hover, &:focus {
         color: $pink;
         &::before {
             transform: translateY(-100%);
         }
         
         
+    }
+}
+
+label {
+    @include h5-style;
+    display: block;
+    margin-bottom: 4px;
+} input {
+    &::-webkit-input-placeholder, &::-moz-placeholder, &:-ms-input-placeholder, &:-moz-placeholder { /* Chrome/Opera/Safari */
+        color: $red;
+        @include p-style;
+    } &[type="text"], &.durationpicker-duration {
+        @include prefix(appearance, none);
+        width: 100%;
+        height: 32px;
+        @include p-style;
+        background: transparent;
+        border: 0;
+        border-bottom: 1px solid $red;
+        border-radius: 0;
+        margin-bottom: 12px;
+        color: $red;
+        transition: background 0.6s;
+        &:focus {
+            background: rgba($red, 0.1);
+        }
+    } &.durationpicker-duration {
+        width: 48px;
+        text-align: center;
+    } &[type=number]::-webkit-inner-spin-button, &[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none; 
+    } &:focus {
+        outline: none;
+    }
+} select {
+    @include prefix(appearance, none);
+    width: 100%;
+    height: 32px;
+    padding: 0 12px;
+    @include p-style;
+    background: transparent;
+    border: 1px solid $red;
+    border-radius: 0;
+    margin-bottom: 12px;
+    color: $red;
+    position: relative;
+    background-image: url('../img/select.svg');
+    background-position: calc(100% - 8px) 50%;
+    background-repeat: no-repeat;
+    background-size: 12px auto;
+    &:focus {
+        outline: none;
+        background: rgba($red, 0.1);
     }
 }
