--- a/sass/style.css
+++ b/sass/style.css
@@ -20,6 +20,11 @@
  *
  * @author Maya Arguelles
  */
+/*
+ * Clear button style
+ *
+ * @author Maya Arguelles
+ */
 /*--------------------------------*	 STYLES
 \*--------------------------------*/
 /*
@@ -162,12 +167,13 @@ ul, ol {
 
 /* line 47, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
 mark {
-  background: rgba(255, 0, 0, 0.8);
+  background: red;
   color: #ffe6e6;
+  font-weight: normal;
   padding-left: 6px;
   padding-right: 6px; }
 
-/* line 54, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+/* line 55, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
 button {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -193,7 +199,7 @@ button {
   position: relative;
   transition: 0.2s cubic-bezier(0.85, 0.01, 0.33, 1);
   cursor: pointer; }
-  /* line 71, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+  /* line 72, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
   button::before {
     content: '';
     position: absolute;
@@ -205,22 +211,110 @@ button {
     transition: 0.2s cubic-bezier(0.85, 0.01, 0.33, 1);
     transform: translateY(0);
     z-index: -1; }
-  /* line 82, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
-  button:hover {
+  /* line 83, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+  button:hover, button:focus {
     color: #ffe6e6; }
-    /* line 84, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
-    button:hover::before {
+    /* line 85, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+    button:hover::before, button:focus::before {
       transform: translateY(-100%); }
+
+/* line 93, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+label {
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: "Americana Std Extra Bold", serif;
+  line-height: 20px;
+  display: block;
+  margin-bottom: 4px; }
+
+/* line 98, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+input::-webkit-input-placeholder, input::-moz-placeholder, input:-ms-input-placeholder, input:-moz-placeholder {
+  /* Chrome/Opera/Safari */
+  color: red;
+  font-size: 16px;
+  font-weight: lighter;
+  line-height: 24px; }
+
+/* line 101, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+input[type="text"], input.durationpicker-duration {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 32px;
+  font-size: 16px;
+  font-weight: lighter;
+  line-height: 24px;
+  background: transparent;
+  border: 0;
+  border-bottom: 1px solid red;
+  border-radius: 0;
+  margin-bottom: 12px;
+  color: red;
+  transition: background 0.6s; }
+  /* line 113, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+  input[type="text"]:focus, input.durationpicker-duration:focus {
+    background: rgba(255, 0, 0, 0.1); }
+
+/* line 116, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+input.durationpicker-duration {
+  width: 48px;
+  text-align: center; }
+
+/* line 119, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none; }
+
+/* line 121, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+input:focus {
+  outline: none; }
+
+/* line 124, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 32px;
+  padding: 0 12px;
+  font-size: 16px;
+  font-weight: lighter;
+  line-height: 24px;
+  background: transparent;
+  border: 1px solid red;
+  border-radius: 0;
+  margin-bottom: 12px;
+  color: red;
+  position: relative;
+  background-image: url("../img/select.svg");
+  background-position: calc(100% - 8px) 50%;
+  background-repeat: no-repeat;
+  background-size: 12px auto; }
+  /* line 140, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_tags.scss */
+  select:focus {
+    outline: none;
+    background: rgba(255, 0, 0, 0.1); }
 
 /* line 1, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_ui-kit.scss */
 .pentagram {
-  fill: red; }
-  /* line 3, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_ui-kit.scss */
-  .pentagram.active {
+  fill: red;
+  overflow: visible;
+  width: 0.8em;
+  height: 0.8em; }
+  /* line 6, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_ui-kit.scss */
+  .pentagram.inactive {
     fill: none;
     stroke: red;
     stroke-width: 1px;
     stroke-linecap: round; }
+    /* line 11, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_ui-kit.scss */
+    .pentagram.inactive:hover {
+      stroke: none;
+      fill: red; }
 
 /* line 1, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_nav.scss */
 header {
@@ -241,9 +335,8 @@ header {
   padding-top: 24px;
   height: 80px;
   padding-bottom: 12px;
-  width: 100%;
-  max-width: 1024px;
-  margin: 0 auto; }
+  width: calc(100% - 48px);
+  margin: auto; }
   /* line 20, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_nav.scss */
   #main-navigation #idle-hands-logo {
     flex: 0 0 auto;
@@ -275,7 +368,7 @@ header {
         line-height: 20px;
         text-transform: uppercase;
         transition: 0.4s cubic-bezier(0.85, 0.01, 0.33, 1); }
-        /* line 56, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+        /* line 88, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
         #main-navigation ul li a::before {
           content: '';
           position: absolute;
@@ -288,16 +381,203 @@ header {
           background: red;
           transition: 0.4s cubic-bezier(0.85, 0.01, 0.33, 1);
           z-index: -1; }
-        /* line 68, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+        /* line 100, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
         #main-navigation ul li a:hover {
           transform: translateY(-4px);
           color: #ffe6e6; }
-          /* line 71, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+          /* line 103, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
           #main-navigation ul li a:hover::before {
             transform: scaleY(1); }
   /* line 36, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_nav.scss */
   #main-navigation button {
     flex: 0 0 auto; }
+
+/* line 1, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+#add-task-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  min-height: 100%;
+  overflow-y: scroll;
+  width: 100%;
+  max-width: 480px;
+  background: #ffe6e6;
+  border-left: 1px solid red;
+  z-index: 10;
+  transform: translateX(100%);
+  transition: 0.6s cubic-bezier(0.85, 0.01, 0.33, 1);
+  padding: 56px 48px; }
+  /* line 15, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal.active {
+    transform: translateX(0); }
+  /* line 18, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal #close-task-modal {
+    padding: unset;
+    border: unset;
+    font-size: unset;
+    font-weight: unset;
+    font-family: unset;
+    line-height: unset;
+    text-transform: unset;
+    transition: unset;
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    font-weight: bold;
+    font-size: 24px; }
+    /* line 51, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+    #add-task-modal #close-task-modal::before {
+      content: unset;
+      position: unset;
+      left: unset;
+      top: unset;
+      height: unset;
+      width: unset;
+      background: unset;
+      transition: unset;
+      transform: unset;
+      z-index: unset; }
+    /* line 62, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+    #add-task-modal #close-task-modal:hover {
+      color: unset; }
+      /* line 64, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_mixins.scss */
+      #add-task-modal #close-task-modal:hover::before {
+        transform: unset; }
+  /* line 26, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form h2 {
+    margin-bottom: 24px; }
+  /* line 28, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form #scheduled-checkbox {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0; }
+  /* line 34, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form .durationpicker-container {
+    height: unset !important;
+    margin-bottom: 8px; }
+  /* line 37, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form .durationpicker-innercontainer {
+    display: inline-block !important;
+    margin-right: 8px; }
+    /* line 40, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    #add-task-modal form .durationpicker-innercontainer input {
+      margin-right: 8px; }
+  /* line 43, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form button[type="submit"] {
+    margin-top: 24px;
+    float: right; }
+  /* line 48, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form#add-event-form .hidden-fields {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0; }
+  /* line 54, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #add-task-modal form#add-event-form .unique-fields {
+    display: none; }
+
+/* line 61, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+.overlay {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 0, 0, 0.3);
+  z-index: 9; }
+
+/* line 72, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+#ui-datepicker-div {
+  margin-top: 8px;
+  background: #ffe6e6;
+  border: 1px solid red;
+  padding: 8px 12px; }
+  /* line 77, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #ui-datepicker-div .ui-datepicker-prev {
+    font-size: 14px;
+    font-weight: bolder;
+    font-family: "Americana Std Extra Bold", serif;
+    line-height: 20px;
+    text-transform: uppercase;
+    float: left; }
+  /* line 80, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #ui-datepicker-div .ui-datepicker-next {
+    font-size: 14px;
+    font-weight: bolder;
+    font-family: "Americana Std Extra Bold", serif;
+    line-height: 20px;
+    text-transform: uppercase;
+    float: right; }
+  /* line 83, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #ui-datepicker-div .ui-datepicker-title {
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "Americana Std Extra Bold", serif;
+    line-height: 20px;
+    padding: 0 24px;
+    margin-bottom: 8px; }
+  /* line 87, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  #ui-datepicker-div .ui-datepicker-calendar {
+    width: 100%; }
+    /* line 89, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    #ui-datepicker-div .ui-datepicker-calendar thead {
+      font-size: 14px;
+      font-weight: bolder;
+      font-family: "Americana Std Extra Bold", serif;
+      line-height: 20px;
+      text-transform: uppercase; }
+
+/* line 95, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+.styled-checkbox {
+  height: 32px;
+  width: 56px;
+  border: 1px solid red;
+  border-radius: 16px;
+  font-size: 32px;
+  position: relative;
+  transition: 0.3s cubic-bezier(0.85, 0.01, 0.33, 1);
+  cursor: pointer;
+  margin-bottom: 12px; }
+  /* line 105, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  .styled-checkbox:focus {
+    outline: none; }
+  /* line 108, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  .styled-checkbox .styled-checkbox-toggle {
+    position: absolute;
+    left: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: calc( 32px * 0.9);
+    transition: 0.6s cubic-bezier(0.85, 0.01, 0.33, 1); }
+    /* line 115, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    .styled-checkbox .styled-checkbox-toggle svg {
+      transition: 0.6s cubic-bezier(0.85, 0.01, 0.33, 1);
+      fill: red;
+      stroke: transparent; }
+  /* line 120, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+  .styled-checkbox.active {
+    background: red;
+    stroke: transparent; }
+    /* line 123, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    .styled-checkbox.active .styled-checkbox-toggle {
+      transform: translateY(-50%) translateX(calc(100% - 2px)) rotate(180deg); }
+    /* line 125, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    .styled-checkbox.active svg {
+      fill: #ffe6e6; }
+    /* line 128, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_add-task.scss */
+    .styled-checkbox.active:hover svg {
+      fill: #ffe6e6;
+      stroke: transparent; }
 
 /* line 1, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_main.scss */
 body {
@@ -308,9 +588,64 @@ body {
 
 /* line 8, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/_main.scss */
 main {
-  width: 100%;
-  max-width: 1024px;
-  margin: 0 auto;
+  width: calc(100% - 48px);
+  margin: auto;
   margin-top: 80px; }
+
+/* line 1, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+.calendar-weekly {
+  margin-top: 40px;
+  height: calc( 100vh - 80px - 40px);
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stetch; }
+
+/* line 13, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+.calendar-weekly-fixed {
+  position: sticky;
+  position: -webkit-sticky;
+  left: 0; }
+  /* line 17, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+  .calendar-weekly-fixed .hourly-template {
+    width: 250px;
+    background: #ffe6e6;
+    border-right: 1px solid red; }
+    /* line 21, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+    .calendar-weekly-fixed .hourly-template .hour {
+      height: 48px;
+      padding: 8px 12px; }
+      /* line 24, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+      .calendar-weekly-fixed .hourly-template .hour:nth-of-type(2n) {
+        background: rgba(255, 0, 0, 0.1); }
+
+/* line 31, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+.calendar-weekly-day {
+  flex: 0 0 250px;
+  border-left: 1px solid red;
+  padding: 0;
+  position: relative; }
+  /* line 36, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+  .calendar-weekly-day:first-of-type {
+    border-left: 0; }
+  /* line 40, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+  .calendar-weekly-day .event {
+    width: calc(100% - 24px);
+    padding: 8px 12px;
+    border: 1px solid red;
+    border-bottom: 6px solid red;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); }
+    /* line 48, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+    .calendar-weekly-day .event h4 {
+      padding-bottom: 4px;
+      border-bottom: 1px solid red; }
+      /* line 51, /Users/maya/Desktop/school/MAMP/idle-hands/IdleHands/sass/calendar/_weekly.scss */
+      .calendar-weekly-day .event h4 .pentagram {
+        cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
