--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -8,9 +8,8 @@ $americana : 'Americana Std Extra Bold', serif;
 	 COLORS
 \*--------------------------------*/
 $pink : rgb(255,230,230);
-$pinkfrag : 255, 230, 230;
+//$pink : rgb(218, 192, 247);
 $red : rgb(255, 0, 0);
-$redfrag : 255, 0, 0;
 
 /*--------------------------------*\
 	 BEZIER CURVES
