forms function frag

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -116,3 +116,16 @@
     //max-width: 1024px;
     margin: auto;
 }
+
+/*
+ * Hide without display: none
+ *
+ * @author Maya Arguelles
+ */
+@mixin hide-for-screen-readers {
+    position: absolute; 
+    overflow: hidden; 
+    clip: rect(0 0 0 0); 
+    height: 1px; width: 1px; 
+    margin: -1px; padding: 0; border: 0; 
+}
