--- a/sass/_add-task.scss
+++ b/sass/_add-task.scss
@@ -46,6 +46,21 @@
         } button[type="submit"] {
             margin-top: 24px;
             float: right;
+        } .field-pairs {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: stretch;
+            .pair-fill {
+                flex: 1 0 0;
+            } .pair-auto {
+                flex: 0 0 auto;
+            } > * {
+                margin-right: 24px;
+                &:last-of-type {
+                    margin-right: 0;
+                }
+            }
         }
         &#add-event-form {
             .hidden-fields {
@@ -104,6 +119,7 @@
     position: relative;
     transition: 0.3s $fancybezier;
     cursor: pointer;
+    margin-top: 8px;
     margin-bottom: 12px;
     &:focus {
         outline: none;
@@ -112,7 +128,7 @@
         position: absolute;
         left: 2px;
         top: 50%;
-        transform: translateY(-50%);
+        transform: translateY(calc(-50% + 1px));
         height: calc( 32px * 0.9 );
         transition: 0.6s $fancybezier;
         svg {
