--- a/sass/_event-modal.scss
+++ b/sass/_event-modal.scss
@@ -14,5 +14,23 @@
         position: absolute;
         right: 24px;
         top: 12px;
+    } form {
+        h2 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+            svg {
+                flex: 0 0 0.8em;
+                margin-right: 24px;
+            } input {
+                flex: 1 0 0;
+                border-bottom: 0;
+                @include h3-style;
+                &:hover {
+                    border-bottom: 1px solid $red;
+                }
+            }
+        }
     }
 }
