--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import "ui-kit";
 @import "nav";
 @import "add-task";
+@import "view-task";
 @import "event-modal";
 @import "main";
 @import "calendar/calendar";
