--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -42,6 +42,7 @@
 @mixin clear-button-style {
     padding: unset;
     border: unset;
+    height: unset;
     font-size: unset;
     font-weight: unset;
     font-family: unset;
