--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -7,9 +7,14 @@ $americana : 'Americana Std Extra Bold', serif;
 /*--------------------------------*\
 	 COLORS
 \*--------------------------------*/
-$pink : rgb(255,230,230);
-//$pink : rgb(218, 192, 247);
-$red : rgb(255, 0, 0);
+//$pink : rgb(255,230,230);
+$pink : rgb(218, 192, 247);
+//$pink : rgb(204, 255, 2);
+//$red : rgb(255, 0, 0);
+$red : rgb(23, 76, 65);
+//$red : rgb(23, 107, 90);
+//$red : rgb(4, 119, 62);
+//$red : rgb(204, 255, 2);
 
 /*--------------------------------*\
 	 BEZIER CURVES
