--- a/sass/calendar/_weekly.scss
+++ b/sass/calendar/_weekly.scss
@@ -11,7 +11,7 @@
 }
 
 .calendar-weekly-fixed {
-    padding-top: 24px;
+    padding-top: 48px;
     position: sticky;
     position: -webkit-sticky;
     left: 0;
@@ -39,10 +39,11 @@
     z-index: 3;
     .calendar-weekly-day-header {
         flex: 0 0 250px;
-        height: 24px;
+        height: 48px;
         background: $pink;
         border-bottom: 1px solid $red;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
@@ -62,7 +63,7 @@
     padding: 0;
     position: relative;
     z-index: 2;
-    margin-top: 24px;
+    margin-top: 48px;
     &:first-of-type {
         border-left: 0;
         //margin-left: 120px;
@@ -89,6 +90,17 @@
         } &:hover {
             transform: translateX(-50%) translateY(-10px);
             border-bottom-width: 16px;
+        } &.to-confirm {
+            background: rgba($pink, 0.5);
+            h4 {
+                border-bottom-style: dashed;
+                .pentagram {
+                    fill: none;
+                    stroke: $red;
+                    stroke-width: 1px;
+                    stroke-linecap: round;
+                }
+            }
         }
     }
 }
